--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
-<%- include("header") %>
+<%- include("partials/header") %>
+
 <h1>HOME</h1>
 <p><%= hsc %> </p>
 
-
-<%- include("footer") %>
+<%- include("partials/footer") %>
