--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,4 +1,8 @@
 <%- include("partials/header") %>
-
+<h1>Compose</h1>
+<form action="/" method="post">
+  <input type="text" name="" id="">
+  <button type="submit" name="button">Publish</button>
+</form>
 
 <%- include("partials/footer") %>
