--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,8 +1,12 @@
 <%- include("partials/header") %>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-  <input type="text" name="postTitle">
-  <button type="submit" name="button">Publish</button>
+  <label for="postTitle" class="form-label">Title</label>
+  <input type="text" class="form-control" name="postTitle" id="postTitle" autofocus>
+
+  <label for="postContent" class="form-label">Post</label>
+  <textarea name="postContent" class="form-control" id="postContent" cols="30" rows="10" name=""></textarea>
+  <button type="submit" class="btn btn-primary mb-3" name="button" style="margin-top: 10px;">Publish</button>
 </form>
 
 <%- include("partials/footer") %>
