--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -4,8 +4,8 @@
   <label for="postTitle" class="form-label">Title</label>
   <input type="text" class="form-control" name="postTitle" id="postTitle" autofocus>
 
-  <label for="postContent" class="form-label">Post</label>
-  <textarea name="postContent" class="form-control" id="postContent" cols="30" rows="10" name=""></textarea>
+  <label for="postBody" class="form-label">Post</label>
+  <textarea name="postBody" class="form-control" id="postBody" cols="30" rows="10" name=""></textarea>
   <button type="submit" class="btn btn-primary mb-3" name="button" style="margin-top: 10px;">Publish</button>
 </form>
 
