--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,5 +2,9 @@
 
 <h1>HOME</h1>
 <p><%= hsc %> </p>
+<% posts.forEach(post => { %>
+<h1><%=    post.pT  %></h1>
+<p><%= post.pB %> </p>
+<% }); %>
 
 <%- include("partials/footer") %>
