--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,7 @@
 .footer {
     position: absolute;
     text-align: center;
-    bottom: 0;
+    top: -1;
     width: 100%;
     height: 60px;
     background-color: #1abc9c;
