--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 </div>
 <div class="footer-padding"></div>
-<div class="footer">
+<footer class="footer">
   <p>Made with ❤️ by <span class="kmdev">KMDEV</span></p>
-</div>
+</footer>
 </div>
 </body>
 
