--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <p><%= hsc %> </p>
 <% posts.forEach(post => { %>
 <h1><%= post.pT %></h1>
-<p><%= post.pB %> </p>
+<p><%= post.pB.substring(0,100)+"..."%> <a href="<%= "/posts/" + post.pT %> ">Read More</a></p>
 <% }); %>
 
 <%- include("partials/footer") %>
