--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") %>
-<h1><%= post.pT %></h1>
-<p><%= post.pB %> </p>
+<h1><%= post.title %></h1>
+<p><%= post.content %> </p>
 
 <%- include("partials/footer") %>
